@@ -1,4 +1,5 @@
 0.8.2
+ - Add fluorescence crosstalk correction (#185)
  - Bugfixes:
    - Young's modulus not updated (dclab 0.2.9.dev9) (#190)
    - UnicodeDecodeError on fcs-export (fcswrite 0.1.3.dev13) (#189)
